UI Polish: Fixed text visibility, removed emojis, enhanced professional design

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-# Groq API Configuration
-GROQ_API_KEY=your-groq-api-key-here
-GROQ_MODEL=llama-3.3-70b-versatile
+# Environment Variables - API Configuration Template
+# Copy this file to .env and fill in your actual API keys
+
+# Azure OpenAI Configuration (Primary LLM)
+AZURE_OPENAI_KEY=your_azure_openai_api_key_here
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_DEPLOYMENT=gpt-4o
+AZURE_OPENAI_MODEL=gpt-4o
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+
+# Groq API Configuration (OCR Vision only for scanned PDFs)
+GROQ_API_KEY=your_groq_api_key_here
+
+# Instructions:
+# 1. Copy this file: cp .env.example .env
+# 2. Replace placeholder values with your actual API keys
+# 3. Get Azure OpenAI key from: https://portal.azure.com
+# 4. Get Groq API key from: https://console.groq.com
