--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit>=1.30.0
 groq>=0.4.0
+openai>=1.0.0
 python-dotenv>=1.0.0
 PyPDF2>=3.0.0
 python-docx>=1.1.0
 openpyxl>=3.1.0
 reportlab>=4.0.0
 pandas>=2.0.0
+PyMuPDF>=1.23.0
+Pillow>=10.0.0
